@@ -4,6 +4,9 @@
 #  copy this file to config/webistrano.rb and edit
 #
 WebistranoConfig = {
+
+  # secret password for session HMAC
+  :session_secret => 'please choose a long random string, min. 30 characters'
   
   # SMTP settings for outgoing email
   :smtp_delivery_method => :sendmail,
